--- a/src/styles.css
+++ b/src/styles.css
@@ -24,6 +24,13 @@ body {
 
 .game-state {
   padding: 16px;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  background-color: #fff;
+  z-index: 1;
+  border-radius: 4px;
+  opacity: 0.8;
 }
 
 .x-value {
